# Complement

./: README.md
complement/: README.md  index.html  package-lock.json  package.json  project_technical_specs.json  remaining_features_priority.md
complement/ml_training/: quick_train.py  requirements.txt  train_model.py
complement/ml_training/models/: app_labels.txt  model_info.json
complement/models/: complement_recommendation_model.onnx
complement/src/: index.html  main.js  main.ts  styles.css
complement/src-tauri/: Cargo.toml  tauri.conf.json
complement/src-tauri/src/: main.rs
