[package]
name = "complement"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "complement_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
windows = { version = "0.61", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
meval = "0.2.0"
fuzzy-matcher = "0.3.7"
walkdir = "2.5.0"
open = "5.3.2"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
clipboard = "0.5.0"
urlencoding = "2.1.3"
ort = { version = "2.0.0-rc.2", features = ["ndarray"] }
ndarray = "0.15"
csv = "1.3"
tokio = { version = "1.0", features = ["full"] }

